--- a/juego.css
+++ b/juego.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: grey;
+    font-family: 'Roboto', sans-serif;
 }
 
 #juego{
@@ -59,6 +60,31 @@ body{
     padding-top:20px;
     
 }
+
+#record{
+    background-color:white;
+    width: 200px;
+    height: 50px;
+    margin: auto;
+   
+    margin-bottom: 0;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    padding-top:20px;
+}
+#recordtitle{
+    background-color: white;
+    width: 100px;
+    height: 20px;
+    margin: auto;
+    margin-top: -20px;
+    text-align: center;
+    color: red;
+    font-weight: bold;
+}
+
+
 
 @keyframes animacion {
     0%{left:500px}
